--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -10,8 +10,8 @@
 
   <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">Background</h3>
-    This project was born during the <strong>Hack at the Mitchell</strong> and was developed as an entry for <a href="http://libraryhack.org/">{Library:/hack/}</a>.
-    It was hacked together in the spare time I had in May 2011.
+    This project was born during the <strong>Hack at the Mitchell</strong> as an entry for <a href="http://libraryhack.org/">{Library:/hack/}</a> and was <a href="http://libraryhack.org/2011/06/25/the-winners/">the winner</a> of the Queensland Data Mashup Prize.
+    It was mostly hacked together in the spare time I had in May 2011.
   </div>
 
   <div class="widget about-container">
