Change data page titles to h1

--- a/app/views/data/boats.html.erb
+++ b/app/views/data/boats.html.erb
@@ -14,6 +14,7 @@
 
 <% content_for :page_header do %>
   <h2 class="page-title">Convict Boats</h2>
+  <h1 class="page-title">Convict Boats</h1>
 <% end %>
 
   <div class="graphs-container">
