--- a/app/assets/stylesheets/theme/style.css.scss
+++ b/app/assets/stylesheets/theme/style.css.scss
@@ -203,7 +203,7 @@ box-shadow: 0px 0px 2px #000000;
 /* 4. Page Styles
 **********************************************************************************************/
 
-h2.page-title {
+h1.page-title, h2.page-title {
 background: image_url('theme/images/texthatch.png') top left repeat;
 font-family: 'Neuton', arial, serif;
 font-size: 25px;
