Add page description

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -78,6 +78,10 @@
 #data-table
   padding-top: 5px
 
+#boats-page-container
+  @extend #base-page-container
+  padding-bottom: 60px
+
 #boats-table-container
   @extend #base-page-container
 
@@ -332,6 +336,14 @@ p.notes
 
 .show-convict-map-container
   margin-bottom: 10px
+
+.data-page-overview
+  position: absolute
+  bottom: 0
+  color: grey
+  width: 950px
+  padding: 10px 5px 0 5px
+  border-top: 1px solid #EEE
 
 .yui-dt a
   text-decoration: none
