Add page descriptions

--- a/app/views/data/court_counties.html.erb
+++ b/app/views/data/court_counties.html.erb
@@ -21,6 +21,10 @@
 
 <div id="court-counties-page-container">
 
+  <p id="court-counties-overview" class="data-page-overview">
+    Where did the convicts come from before they arrived in Australia?  This page explores convict origins by tracking counties of conviction from court records.  It includes a bar chart of the top conviction counties and a map marking county locations.
+  </p>
+
   <div id="top-conviction-container" class="widget">
     <h3 class="widget-section-title widget-title-graph-icon">Top Conviction Locations</h3>
     <div id="top-conviction-chart">Loading ...</div>
