--- a/app/views/data/departure_dates.html.erb
+++ b/app/views/data/departure_dates.html.erb
@@ -19,6 +19,10 @@
 
 <div id="departure-date-page-container">
 
+  <p id="departure-date-overview" class="data-page-overview">
+    When did your ancestors depart for Australia by boat?  This page visualises the departure dates of Australian convicts.  It includes a stacked area graph of conviction year and destination state, a column chart of departure month and a pie chart of departure decade.
+  </p>
+
 <div id="year-table-container" class="widget">
   <h3 class="widget-section-title widget-title-table-icon">Browse By Year</h3>
   <div id="data-table">Loading ...</div>
