--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -19,6 +19,11 @@
 <% end %>
 
 <div id="destinations-page-container">
+
+    <p id="destinations-overview" class="data-page-overview">
+      Where were the majority of Australian convicts sent?  This page examines convict records to visualise their destination colony.  It includes a geo intensity map of conviction destination and a donut graph of destination and state.
+    </p>
+
 <% unless @destinations.empty? %>
 
   <div id="destinations-table-container" class="widget">
