--- a/app/views/data/names.html.erb
+++ b/app/views/data/names.html.erb
@@ -18,6 +18,10 @@
 
 <div id="names-page-container">
 
+    <p id="names-overview" class="data-page-overview">
+      Do you bear the name of your ancestors?  Was it a popular convict name?  This page includes the top 50 first and last names found in convict records and allows you to search for your own name.  It also contains a bar chart of the most popular first names and a bar chart of the most popular last names.
+    </p>
+
   <div id="first-names-search-container" class="widget">
     <h3 class="widget-section-title widget-title-text-icon">Search by First Name</h3>
     <div>
