--- a/app/views/data/terms.html.erb
+++ b/app/views/data/terms.html.erb
@@ -18,6 +18,11 @@
 
 <div id="terms-page-container">
 
+    <p id="terms-overview" class="data-page-overview">
+    Many convicts where transported to Australia, some may have even been your ancestors. How severe was their punishment?  This page explores the sentences received by convicts.  Including a pie chart of sentence severity and a column chart of conviction decade and punishment.
+    </p>
+
+
   <div id="term-table-container" class="widget">
     <h3 class="widget-section-title widget-title-table-icon">Browse By Sentence</h3>
     <div id="data-table">Loading ...</div>
