--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -112,7 +112,7 @@ p.notes
 
 #destinations-page-container
   @extend #base-page-container
-  height: 650px
+  height: 690px
 
 #destinations-table-container
   position: absolute
@@ -254,7 +254,7 @@ p.notes
 
 #terms-page-container
   @extend #base-page-container
-  height: 880px
+  min-height: 900px
 
 #term-table-container
   position: absolute
